@@ -8,6 +8,7 @@
 ---------------------------------------------
 .: WSM: Task - Add message note before send to merchant (WSM-410)
 .: WSM: Task - Display New Products Category (WSM-404)
+.: WSM: Task - No category when creating product (WSM-381)
 
 - v1.0.10943                                -
 ---------------------------------------------
